# nstack

./: .gitignore  CONTRIBUTING.md  Contributor_Agreement.md  LICENSE  README.md  stack-oss-cli-snapshot.yaml  stack.yaml
nstack/: nstack.cabal  test_output.xml
nstack-cli/: README.md  nstack-cli.cabal
nstack-cli/app/: NStackCLI.hs
nstack-cli/data/client/templates/init/common/: module.nml  nstack.yaml
nstack-cli/data/client/templates/init/framework/: nstack.yaml
nstack-cli/data/client/templates/init/nodejs/: service.js
nstack-cli/data/client/templates/init/python/: service.py
nstack-cli/data/client/templates/init/python2/: service.py
nstack-cli/data/client/templates/init/r/: service.r
nstack-cli/data/client/templates/init/workflow/: module.nml  workflow.nml
nstack-cli/res/: Makefile  module.lang
nstack-cli/src/NStack/CLI/: Auth.hs  Commands.hs  Parser.hs  Templates.hs  Types.hs
nstack-prelude/: README.md  nstack-prelude.cabal
nstack-prelude/src/NStack/Prelude/: Applicative.hs  Debug.hs  Exception.hs  FilePath.hs  Format.hs  Function.hs  Map.hs  Monad.hs  Parsec.hs  Pipes.hs  Shell.hs  Stateless.hs  Text.hs  Time.hs  URI.hs
nstack/src/NStack/: Auth.hs  Http.hs  SafeCopyOrphans.hs  Settings.hs  UUIDOrphans.hs
nstack/src/NStack/Common/: Environment.hs
nstack/src/NStack/Comms/: ApiHash.hs  ApiHashValue.hs  TypeRepresentation.hs  Types.hs
nstack/src/NStack/Module/: ConfigFile.hs  Name.hs  Parser.hs  QMap.hs  Types.hs  Version.hs
nstack/src/NStack/Module/Types/: Aeson.hs
nstack/src/NStack/Registry/: Routes.hs  Types.hs
nstack/src/NStack/Settings/: Class.hs  Parser.hs  Types.hs
nstack/src/NStack/Settings/Internal/: Lens.hs  Orphans.hs
nstack/src/NStack/Utils/: Archive.hs  Debug.hs
nstack/test/: TestSuite.hs
nstack/test/NStack/: ModuleNameTests.hs
nstack/test/res/: invalid-analytics-settings.conf  invalid-authentication1.conf  invalid-authentication2.conf  invalid-authentication3.conf  invalid-authentication4.conf  invalid-frontend-host.conf  invalid-install-id.conf  invalid-server.conf  valid-settings-file.conf
