name: nstack-cli
version: 0.0.9
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: toolkit@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack command line interface
description: Please see README.md
category: Cloud
author: NStack Crew
data-files:
    data/client/templates/init/common/nstack.yaml
    data/client/templates/init/nodejs/service.js
    data/client/templates/init/python/service.py
    data/client/templates/init/python/requirements.txt
    data/client/templates/init/python/setup.py
    data/client/templates/init/workflow/module.nml

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
        NStack.CLI.Auth
        NStack.CLI.Commands
        NStack.CLI.Parser
        NStack.CLI.Templates
        NStack.CLI.Types
  build-depends:
        base,
        aeson,
        wreq,
        bytestring,
        connection,
        containers,
        cryptonite,
        directory,
        extra,
        filepath,
        file-embed,
        foldl,
        ghc,
        haskeline,
        http-client,
        http-client-tls,
        http-types,
        optparse-applicative,
        lens,
        mainland-pretty,
        megaparsec,
        monad-classes,
        mtl,
        mustache,
        parsec,
        process,
        system-filepath,
        text,
        thyme,
        tree-view,
        turtle,
        yaml,
        nstack -any,
        nstack-prelude -any
  other-modules:
        Paths_nstack_cli
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

executable nstack
    main-is: NStackCLI.hs
    build-depends:
        async,
        base,
        bytestring,
        cereal,
        connection,
        containers,
        either,
        extra,
        haskeline,
        http-client,
        http-client-tls,
        http-types,
        lens,
        mainland-pretty,
        memory,
        monad-classes,
        mtl,
        optparse-applicative,
        random,
        text,
        turtle,
        uuid,
        websockets,
        nstack -any,
        nstack-prelude -any,
        nstack-cli -any
    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      MagicHash
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      UndecidableInstances
      ViewPatterns
    hs-source-dirs: app
    ghc-options: -Wall -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N -optc-Os -O2

test-suite nstack-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nstack-cli
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

source-repository head
  type:     git
  location: git://github.com/nstack/nstack.git
