name: nstack-prelude
version: 0.0.3.4
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: toolkit@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack utilities/prelude
description: Please see README.md
category: Cloud
author: NStack Crew

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    NStack.Prelude.Applicative
    NStack.Prelude.Debug
    NStack.Prelude.FilePath
    NStack.Prelude.Parsec
    NStack.Prelude.Monad
    NStack.Prelude.Pipes
    NStack.Prelude.Shell
    NStack.Prelude.Text
    NStack.Prelude.URI
  build-depends:
    base >= 4.7 && < 5,
    bytestring >=0.10.6.0,
    containers >=0.5.6.2,
    cereal >=0.5.3.0,
    exceptions,
    extra >=1.4.10,
    http-types >= 0.9.1,
    mainland-pretty >= 0.4.1.4,
    mtl >=2.2.1,
    parsec >= 3.1.11,
    pipes,
    pipes-safe,
    resourcet,
    system-filepath >= 0.4.13.4,
    text >=1.2.2.1,
    transformers-base,
    turtle >=1.2.8
  default-extensions: OverloadedStrings FlexibleContexts
  default-language:    Haskell2010

test-suite nstack-prelude-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
                       nstack-prelude -any
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nstack-prelude
