name: nstack-prelude
version: 0.0.8.1
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: toolkit@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack utilities/prelude
description: Please see README.md
category: Cloud
author: NStack Crew

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    NStack.Prelude.Applicative
    NStack.Prelude.Debug
    NStack.Prelude.Exception
    NStack.Prelude.FilePath
    NStack.Prelude.Format
    NStack.Prelude.Parsec
    NStack.Prelude.Map
    NStack.Prelude.Monad
    NStack.Prelude.Pipes
    NStack.Prelude.Shell
    NStack.Prelude.Stateless
    NStack.Prelude.Text
    NStack.Prelude.Time
    NStack.Prelude.URI
  build-depends:
    base,
    bytestring,
    constraints,
    containers,
    cereal,
    category-printf,
    comonad,
    exceptions,
    extra,
    http-types,
    lens,
    lifted-base,
    mainland-pretty,
    mtl,
    monad-control,
    old-locale,
    parsec,
    pipes,
    pipes-safe,
    resourcet,
    system-filepath,
    text,
    thyme,
    transformers-base,
    turtle >=1.2.8,
    vector-space
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

test-suite nstack-prelude-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       nstack-prelude -any
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

source-repository head
  type:     git
  location: https://github.com/githubuser/nstack-prelude
