name: nstack
version: 0.0.3.2
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: nstack@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack common functionality to Server and CLI
description: Please see README.md
category: Cloud
author: NStack Crew

source-repository head
    type: git
    location: git://github.com/nstack/nstack.git

library
    exposed-modules:
        NStack.Auth
        NStack.Common.Environment
        NStack.Comms.Types
        NStack.Http
        NStack.UUIDOrphans
        NStack.Module.ConfigFile
        NStack.Module.Parser
        NStack.Module.Types
        NStack.Utils.Archive
        NStack.Utils.Debug
        NStack.SafeCopyOrphans
        NStack.Settings
        NStack.Settings.Class
    build-depends:
        base >=4.8 && <4.10,
        acid-state >= 0.14.1,
        aeson >=0.11.2.0,
        async >=2.1.0,
        base16-bytestring >= 0.1.1.6,
        base64-bytestring >= 1.0.0.1,
        binary >=0.7.5.0,
        bytestring >=0.10.6.0,
        cereal >=0.5.3.0,
        constraints >=0.8,
        containers >=0.5.6.2,
        cryptonite >=0.21,
        d-bus >=0.1.3.4,
        directory >=1.2.2.0,
        either >= 4.4.1.1,
        exceptions >=0.8.3,
        extra >=1.4.10,
        filepath >=1.4.0.0,
        foldl >=1.2.1,
        gitrev >= 1.2.0,
        generic-deriving >=1.10.5,
        ghc-prim >=0.5.0.0,
        http-types >= 0.9.1,
        lens >=4.13,
        lens-action >=0.2.0.2,
        lens-aeson >=1.0.0.5,
        logging-effect >= 1.1.2,
        mainland-pretty >=0.4.1.4,
        memory >=0.14.1,
        -- managed >=1.0.5,
        megaparsec >= 5.2.0,
        monad-classes >=0.2.2.1,
        monad-control >= 1.0,
        mtl >=2.2.1,
        mustache >=1.0.2,
        network-uri >= 2.6.1.0,
        parsec >= 3.1.11,
        process >=1.2.3.0,
        psqueues >=0.2.2.1,
        safecopy >= 0.9.1,
        scientific >= 0.3.4.9,
        semigroups >=0.18.1,
        singletons >=2.0.1,
        split >=0.2.3.1,
        string-conv >=0.1.2,
        stm >=2.4.4.1,
        stm-chans >=3.0.0.4,
        stm-delay >=0.1.1.1,
        system-filepath >=0.4.13.4,
        tar >= 0.5.0.3,
        text >=1.2.2.1,
        uuid >=1.3.12,
        transformers >=0.4.2.0,
        transformers-base >= 0.4,
        turtle >=1.2.8,
        vector >=0.11.0.0,
        vector-space >=0.10.3,
        wai >= 3.2.1.1,
        yaml >=0.8.18.1,
        nstack-prelude -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings FlexibleContexts
    hs-source-dirs: src
    other-modules:
        Paths_nstack
        NStack.Settings.Types
        NStack.Settings.Internal.Lens
        NStack.Settings.Internal.Orphans
    ghc-options: -Wall -fno-warn-type-defaults -optc-Os -O2

test-suite nstack-test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base >=4.8 && <4.10,
    aeson >=0.11.2.0,
    bytestring >=0.10.6.0,
    lens >=4.14,
    mtl >=2.2.1,
    scientific >= 0.3.4.9,
    tasty >=0.11.0.3,
    tasty-ant-xml >= 1.0.2,
    tasty-hunit >=0.9.2,
    tasty-quickcheck >=0.8.4,
    text >=1.2.2.1,
    QuickCheck >=2.8.2,
    quickcheck-text >=0.1.0.1,
    vector >=0.11.0.0,
    nstack-prelude -any,
    nstack -any
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules:
  default-extensions: OverloadedStrings FlexibleContexts
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
