name: nstack
version: 0.0.4.1
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: nstack@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack common functionality to Server and CLI
description: Please see README.md
category: Cloud
author: NStack Crew

source-repository head
    type: git
    location: git://github.com/nstack/nstack.git

library
    exposed-modules:
        NStack.Auth
        NStack.Common.Environment
        NStack.Comms.Types
        NStack.Http
        NStack.UUIDOrphans
        NStack.Module.ConfigFile
        NStack.Module.Parser
        NStack.Module.Types
        NStack.Utils.Archive
        NStack.Utils.Debug
        NStack.SafeCopyOrphans
        NStack.Settings
        NStack.Settings.Class
    build-depends:
        base,
        acid-state,
        aeson,
        async,
        base16-bytestring,
        base64-bytestring,
        binary,
        bytestring,
        cereal,
        constraints,
        containers,
        cryptonite,
        d-bus,
        directory,
        either,
        exceptions,
        extra,
        filepath,
        foldl,
        gitrev,
        generic-deriving,
        ghc-prim,
        http-types,
        lens,
        lens-action,
        lens-aeson,
        logging-effect,
        mainland-pretty,
        memory,
        -- managed,
        megaparsec,
        monad-classes,
        monad-control,
        mtl,
        mustache,
        network-uri,
        old-locale,
        parsec,
        process,
        psqueues,
        safecopy,
        scientific,
        semigroups,
        singletons,
        split,
        string-conv,
        stm,
        stm-chans,
        stm-delay,
        system-filepath,
        tar,
        text,
        thyme,
        uuid,
        transformers,
        transformers-base,
        turtle,
        vector,
        vector-space,
        wai,
        yaml,
        nstack-prelude -any
    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      MagicHash
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      UndecidableInstances
      ViewPatterns
    hs-source-dirs: src
    other-modules:
        Paths_nstack
        NStack.Settings.Types
        NStack.Settings.Internal.Lens
        NStack.Settings.Internal.Orphans
    ghc-options: -Wall -fno-warn-type-defaults -optc-Os -O2

test-suite nstack-test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base,
    aeson,
    bytestring,
    lens,
    mtl,
    scientific,
    tasty,
    tasty-ant-xml,
    tasty-hunit,
    tasty-quickcheck,
    text,
    QuickCheck,
    quickcheck-text,
    vector,
    nstack-prelude -any,
    nstack -any
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules:
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
