name: nstack
version: 0.0.8.1
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2016 NStack
maintainer: nstack@nstack.com
homepage: https://github.com/nstack/nstack#readme
synopsis: NStack common functionality to Server and CLI
description: Please see README.md
category: Cloud
author: NStack Crew

source-repository head
    type: git
    location: git://github.com/nstack/nstack.git

library
    exposed-modules:
          NStack.Auth
          NStack.Common.Environment
          NStack.Comms.TypeRepresentation
          NStack.Comms.Types
          NStack.UUIDOrphans
          NStack.Module.Parser
          NStack.Module.QMap
          NStack.Module.Types
          NStack.Module.Types.Aeson
          NStack.SafeCopyOrphans
          NStack.Settings
          NStack.Utils.Archive
          NStack.Utils.Debug
    if !impl(ghcjs)
      exposed-modules:
          NStack.Comms.ApiHash
          NStack.Comms.ApiHashValue
          NStack.Http
          NStack.Module.ConfigFile
          NStack.Settings.Class

    build-depends:
        base,
        aeson,
        async,
        base16-bytestring,
        base64-bytestring,
        binary,
        bytestring,
        cereal,
        cereal-text,
        constraints,
        containers,
        cryptonite,
        directory,
        either,
        exceptions,
        filepath,
        filemanip,
        foldl,
        gitrev,
        generic-deriving,
        ghc-prim,
        lens,
        lens-action,
        lens-aeson,
        mainland-pretty,
        memory,
        megaparsec,
        monad-classes,
        monad-control,
        mtl,
        mustache,
        network-uri,
        old-locale,
        parsec,
        process,
        psqueues,
        safecopy,
        scientific,
        semigroups,
        split,
        srcloc,
        string-conv,
        stm,
        stm-chans,
        system-filepath,
        tar,
        text,
        template-haskell,
        th-lift-instances,
        th-reify-many,
        thyme,
        uuid,
        uniplate,
        transformers,
        transformers-base,
        turtle,
        vector,
        vector-space,
        yaml,
        yaml-combinators,
        nstack-prelude -any
    if !impl(ghcjs)
      build-depends:
        http-types,
        singletons,
        wai

    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      MagicHash
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      UndecidableInstances
      ViewPatterns
    hs-source-dirs: src

    other-modules:
          Paths_nstack
          NStack.Settings.Types
          NStack.Settings.Parser

    ghc-options: -Wall -fno-warn-type-defaults -optc-Os -O2

test-suite nstack-test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base,
    aeson,
    bytestring,
    lens,
    mtl,
    scientific,
    tasty,
    tasty-ant-xml,
    tasty-hunit,
    tasty-quickcheck,
    text,
    QuickCheck,
    quickcheck-text,
    vector,
    nstack-prelude -any,
    nstack -any
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules:
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
